working html/css/js

--- a/index.html
+++ b/index.html
@@ -8,6 +8,59 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <audio id="xAudio" src="audio/mixkit-retro-arcade-casino-notification-211.mp3"></audio>
+    <audio id="oAudio" src="audio/mixkit-arcade-game-jump-coin-216.wav"></audio>
+    <audio id="winAudio" src="audio/mixkit-video-game-win-2016.wav"></audio>
+    <audio id="tieAudio" src="audio/mixkit-retro-arcade-game-over-470.wav"></audio>
+
+    <div class="boardContainer">
+        <div class="github">
+            <a href="https://github.com/Pierce-44/Noughts-and-Crosses" target="_blank">
+                <img src="images/GitHub-Mark-Light-32px.png" alt="GitHub Mark" >
+            </a>
+        </div>
+        <div>
+            
+        </div>
+        <div class="gameBoard">
+            <div class="css1">
+                <p class="grid" id="grid1"></p>
+            </div>
+            <div class="css2">
+                <p class="grid" id="grid2"></p>
+            </div>
+            <div class="css3">
+                <p class="grid" id="grid3"></p>
+            </div>
+            <div class="css4">
+                <p class="grid" id="grid4"></p>
+            </div>
+            <div class="css5">
+                <p class="grid" id="grid5"></p>
+            </div>
+            <div class="css6">
+                <p class="grid" id="grid6"></p>
+            </div>
+            <div class="css7">
+                <p class="grid" id="grid7"></p>
+            </div>
+            <div class="css8">
+                <p class="grid" id="grid8"></p>
+            </div>
+            <div class="css9">
+                <p class="grid" id="grid9"></p>
+            </div>
+        </div>
+    </div>
+
+    <div class="container" id="selectorContainer">
+        <h1 id="✕" class="selector">✕</h1>
+        <h1 id="O" class="selector">O</h1>
+    </div>
+    <div>
+        <h1 id="lowerText">Choose who goes first!</h1>
+    </div>
+
+    <script src="javascript.js"></script>
 </body>
 </html>
